[gd_scene load_steps=4 format=3 uid="uid://bfrx4qb0tmy4t"]

[ext_resource type="Script" path="res://scenes/popups/first_time/GamesSection.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dydir8kskmsc6" path="res://assets/icons/load.svg" id="2"]
[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="3"]

[node name="GamesSection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Choose a gaming library path. This can be pre-existing, or completely new. This path is treated as read-only, and RetroHub will not alter any files within it."
horizontal_alignment = 1
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Path" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "<empty>"
editable = false

[node name="ChooseDir" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../NextButton")
text = "Choose directory"
icon = ExtResource("2")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Store downloaded media in the configuration directory?"

[node name="UseCustomMedia" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="CustomMediaContainer" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CustomMediaContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CustomMediaContainer/VBoxContainer"]
layout_mode = 2
text = "Game media location"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/CustomMediaContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MediaPath" type="LineEdit" parent="VBoxContainer/CustomMediaContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
placeholder_text = "<empty>"
editable = false

[node name="MediaChooseDir" type="Button" parent="VBoxContainer/CustomMediaContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../../NextButton")
text = "Choose directory"
icon = ExtResource("2")

[node name="MediaWarningEmpty" type="RichTextLabel" parent="VBoxContainer/CustomMediaContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[img]assets/icons/warning.svg[/img] The selected directory isn't currently empty."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "This directory will contain all your games. It has a special structure: it consists of folders with short names of every system, where games are then placed inside them, leaving your gaming library tidy.
 
To add games, simply create the system folder if it doesn't exist (either from RetroHub in the next section or manually) and drop your games inside it.
 
RetroHub will automatically filter files based on common extensions per system and recognize your game files. This is configurable per system if tweaks are needed."
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/Label2"]
script = ExtResource("3")

[node name="NextButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../HBoxContainer/ChooseDir")
disabled = true
text = "Next"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ChooseDir" to="." method="_on_ChooseDir_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/UseCustomMedia" to="." method="_on_use_custom_media_toggled"]
[connection signal="pressed" from="VBoxContainer/CustomMediaContainer/VBoxContainer/HBoxContainer3/MediaChooseDir" to="." method="_on_media_choose_dir_pressed"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
